--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,16 +1,27 @@
 /*--------------------------------------------------------------
 # General
---------------------------------------------------------------*/
+---------------------------------------------
 body {
   font-family: "Open Sans", sans-serif;
   color: #444444;
+}
+-----------------*/
+#myidpayer{
+  display: none !important;
+}
+body {
+  font-family: "Open Sans", sans-serif;
+  color: white;
+  background: #18124ed5 !important;
 }
 
 a {
   color: #e03a3c;
   text-decoration: none;
 }
-
+.btn-buy{
+  cursor: pointer;
+}
 a:hover {
   color: #e76668;
   text-decoration: none;
@@ -353,8 +364,82 @@ h6 {
 }
 
 /*--------------------------------------------------------------
-# Hero Section
+# heroa Section
 --------------------------------------------------------------*/
+#heroa {
+  width: 100%;
+  height: 100vh;
+  background: url("../img/A.I-2.gif") top center no-repeat;
+  background-size: cover;
+  position: relative;
+  padding-top: 82px;
+}
+
+#heroa:before {
+  content: "";
+  background: rgba(0, 0, 0, 0.6);
+  position: absolute;
+  bottom: 0;
+  top: 0;
+  left: 0;
+  right: 0;
+}
+
+#heroa h1 {
+  margin: 0;
+  font-size: 48px;
+  font-weight: 700;
+  color: #fff;
+}
+
+#heroa h2 {
+  color: #fff;
+  margin: 10px 0 0 0;
+  font-size: 24px;
+}
+
+#heroa .btn-get-started {
+  font-family: "Raleway", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  letter-spacing: 1px;
+  display: inline-block;
+  padding: 10px 30px;
+  border-radius: 4px;
+  transition: 0.5s;
+  margin-top: 30px;
+  color: #fff;
+  background: #e03a3c;
+  border: 2px solid #e03a3c;
+}
+
+#heroa .btn-get-started:hover {
+  background: transparent;
+  border-color: #fff;
+}
+
+@media (max-width: 768px) {
+  #heroa {
+    text-align: center;
+    padding-top: 58px;
+  }
+
+  #heroa h1 {
+    font-size: 28px;
+  }
+
+  #heroa h2 {
+    font-size: 18px;
+    line-height: 24px;
+  }
+}
+
+@media (max-height: 500px) {
+  #heroa {
+    height: 120vh;
+  }
+}
+
 #hero {
   width: 100%;
   height: 100vh;
@@ -429,6 +514,17 @@ h6 {
   }
 }
 
+.listepack li {
+  text-align: left !important;
+}
+
+#faq a{
+  color: white !important;
+}
+
+#contact p, h3{
+  color: white !important;
+}
 /*--------------------------------------------------------------
 # Sections General
 --------------------------------------------------------------*/
