--- a/team.css
+++ b/team.css
@@ -3,7 +3,10 @@
 *::after {
     box-sizing: border-box;
 }
-
+*{
+    font-family: "Josefin Sans Roman" !important;
+    font-size: 16px !important;
+  }
 html {
     font-family: sans-serif;
     line-height: 1.15;
