--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,16 +85,22 @@ h6 {
 # Header
 --------------------------------------------------------------*/
 #header {
-  background: #fff;
+  background: rgba(21, 20, 46, 0.568);
   transition: all 0.5s;
   z-index: 997;
   padding: 20px 0;
+  color: #fff;
+}
+#header i {
+  color: #fff;
 }
 
 #header.header-scrolled {
   padding: 12px 0;
   box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+  background: rgb(21, 20, 46);
 }
+
 
 #header .logo {
   font-size: 30px;
